--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,13 +3,22 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">Nom Tracker!</h1>
-    <p class="lead">asdfsdf</p>
+
+    <form class="create-food" action="/api/food/" method="post">
+      <div class="form-group">
+       <label for="value">Add Your Nom Description</label>
+       <textarea class="form-control" id="value" name="value" rows="1"></textarea>
+     </div>
+     <button type="submit" class="btn btn-primary">Add Noms</button>
+    </form>
+
   </div>
 </div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-6">
+  <div class="row justify-content-around">
+
+    <div class="col-md-5">
       <h2>Noms that have not been nommed:</h2>
       <ul class="list-group">
         {{#each food}}
@@ -20,9 +29,9 @@
       </ul>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-5">
       <h2>Recently Nommed:</h2>
-      <ul>
+      <ul class="list-group">
         {{#each food}}
         {{#if is_eaten}}
         {{> food/food-block}}
