--- a/views/partials/food/food-block.handlebars
+++ b/views/partials/food/food-block.handlebars
@@ -1,4 +1,4 @@
-<li class="list-group-item d-flex flex-row justify-content-between">
+<li class="list-group-item d-flex flex-row justify-content-between align-items-center">
 	<p class="description">
 		{{description}}
 	</p>
