Compressed hero image

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 #header {
-  background: url('../img/table.jpg');
+  background: url('../img/table-min2.jpg');
   background-size: cover;
 }
 
